--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=dev nodemon index.js",
+    "dev": "cross-env NODE_ENV=dev nodemon index.js && cd client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,7 +28,6 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   }
