--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jarec Turner",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
