--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3030/api",
   "eslintConfig": {
     "extends": [
       "react-app",
